[package]
name = "derive-all"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/ferranSanchezLlado/derive-all.git"
homepage = "https://github.com/ferranSanchezLlado/derive-all.git"
description = "Derive macro that derives all macros possible."
keywords = ["derive", "procedural-macro", "ease-of-use", "flexible", "macro"]
categories = ["accessibility", "config", "development-tools", "rust-patterns"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
